Codigo dos botões melhor escritos

--- a/projeto/cliente/templates/avalista_form.html
+++ b/projeto/cliente/templates/avalista_form.html
@@ -84,6 +84,7 @@
         </div>
         <br>
         <div style='float: right;'>
+            <a href="{% url 'cliente:avalista_list' %}" type="button" class="btn btn-secondary">Voltar</a>
             <button class="btn btn-success" float="right">Cadastrar</button>
         </div>
     </form>   
