--- a/projeto/cliente/templates/avalista_list.html
+++ b/projeto/cliente/templates/avalista_list.html
@@ -8,14 +8,11 @@
     }
 </style>
 
-<div class="class page-header">   
+<div class="class page-header">  
     <div class="float-right">
-        <a href="{% url 'cliente:avalista_add' %}">
-            <button type="button" class="btn btn-success">
-                Cadastrar Avalista
-            </button>
-        </a>       
+        <a href="{% url 'cliente:avalista_add' %}" type="button" class="btn btn-success">Cadastrar Avalista</a>
     </div>
+    
     <div>
         <h2>Lista de Clientes</h2>
     </div>
