--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -4,12 +4,9 @@
 
 <div class="class page-header">
     <div class="float-right">
-        <a href="{% url 'cliente:cliente_add' %}">
-            <button type="button" class="btn btn-success">
-                Cadastrar Cliente
-            </button>
-        </a>       
+        <a href="{% url 'cliente:cliente_add' %}" type="button" class="btn btn-success">Cadastrar Cliente</a>
     </div>
+        
     <div>
         <h2>Lista de Clientes</h2>
     </div>    
