--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -73,7 +73,7 @@ body {
 <body>
 
 <div class="topnav" id="myTopnav">
-    <a href="{% url 'core:index' %}" class="active" class="nav-link">ESCTOP</a>
+    <a href="{% url 'core:index' %}" class="active" class="nav-link">CREEDCOOP</a>
     <a href="{% url 'cliente:cliente_list' %}">Clientes</a>
     <a href="{% url 'cliente:avalista_list' %}">Avalista</a>
     <a href="{% url 'emprestimo:emprestimo_list' %}">Empréstimos</a>
