Contrato exibindo quantia acertada corretamente

--- a/projeto/cliente/templates/avalista_list.html
+++ b/projeto/cliente/templates/avalista_list.html
@@ -10,11 +10,11 @@
 
 <div class="class page-header">  
     <div class="float-right">
-        <a href="{% url 'cliente:avalista_add' %}" type="button" class="btn btn-success">Cadastrar Avalista</a>
+        <a href="{% url 'cliente:avalista_add' %}" type="button" class="btn btn-success">Cadastrar Fiador</a>
     </div>
     
     <div>
-        <h2>Lista de Clientes</h2>
+        <h2>Lista de Fiadores</h2>
     </div>
     
     {% if object_list %}
