--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -248,8 +248,7 @@ window.onload = function imprimir(){
             <b>CLÁUSULA 6ª</b> - Fica eleito o foro desta cidade de Natal/RN, para dirimir qualquer dúvida referente a este contrato.
         </p>
         <p class="fontmenor">
-            E assim, por estarem plenamente contratados na forma acima e em consonância com a legislação em vigor, assinam o presente contrato em 
-            duas vias de igual teor, na presença de testemunhas que a tudo assistiram e conhecimentos tiveram.
+            E assim, por estarem plenamente contratados na forma acima e em consonância com a legislação em vigor, assinam o presente contrato, na presença de testemunhas que a tudo assistiram e conhecimentos tiveram.
         </p>
         <p class="fontmenor">
             ______________________________________ &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp______________________________________
