--- a/projeto/emprestimo/templates/emprestimo_detail.html
+++ b/projeto/emprestimo/templates/emprestimo_detail.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load widget_tweaks %}
 
 {% block content %}
 
@@ -12,17 +13,6 @@
         <a href="{% url 'emprestimo:emprestimo_impress' object.pk %}" type="button" class="btn btn-warning">Carnê</a>
         <a href="{% url 'emprestimo:emprestimo_promissoria' object.pk %}" type="button" class="btn btn-warning">Promissória</a>
         <a href="{% url 'emprestimo:emprestimo_contrato' object.pk %}" type="button" class="btn btn-warning">Contrato</a>
-
-        <div class="btn-group" role="group">
-            <button id="btnGroupDrop1" type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Dropdown
-            </button>
-            <div class="dropdown-menu" aria-labelledby="btnGroupDrop1">
-            <a class="dropdown-item" href="#">Dropdown link</a>
-            <a class="dropdown-item" href="#">Dropdown link</a>
-            </div>
-        </div>
-
 
     </div>
 </span>
