--- a/projeto/emprestimo/templates/emprestimo_promissoria_cnpj.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria_cnpj.html
@@ -231,8 +231,8 @@ window.onload = function imprimir_promissoria(){
                 </b>           
                 <br><br> 
                 <p class="fontmenor a" align="Justify">                     
-                    &nbsp&nbsp&nbsp&nbsp Ao(s) <u>  ${dia} de ${mes} de ${ano} </u>&nbsp&nbsp pagarei por esta única via de <b> NOTA PROMISSÓRIA 
-                    a JOSIMERIO DE ABREU SILVA, CPF/CNPJ 029.388.274-66 </b> ou à sua ordem, a quantia de <u> ${real} reais e ${centavos} centavos</u> 
+                    &nbsp&nbsp&nbsp&nbsp Ao(s) <u>  ${dia} de ${mes} de ${ano} </u>&nbsp&nbsp pagarei por esta única via de <b> NOTA PROMISSÓRIA
+                    a ESCTOP - EMPRESA SIMPLES DE CRÉDITO LTDA, CNPJ 35.297.061/0001-47 </b>  ou à sua ordem, a quantia de <u> ${real} reais e ${centavos} centavos</u> 
                     em moeda corrente deste país, pagável em ESCRITÓRIO NATAL/RN.    
                 </p>   
 
