Inputs com letras maiusculas

--- a/projeto/core/templates/base.html
+++ b/projeto/core/templates/base.html
@@ -40,7 +40,10 @@ label.required:after{
 label {
   font-weight: bold;
   margin-bottom: 0px;
-}      
+}   
+input {
+  text-transform: capitalize;
+}
 
   
 </style>
