Correção na tela inicial-erro de escrita

--- a/projeto/core/templates/registration/login.html
+++ b/projeto/core/templates/registration/login.html
@@ -97,7 +97,7 @@
     <form method="post" action="{% url 'login' %}">
         {% csrf_token %}       
         <div class="col-sm-4 center">   
-            <a class="fontemaior">CREEDCOOP</a><br>                 
+            <a class="fontemaior">CREDCOOP</a><br>                 
                 <div class="form-group">                
                     <a>{{ form.username.label_tag }}</a>
                     <a>{{ form.username }}</a>                
