Sobreposição do navbar desfeita para ajusters

--- a/projeto/cliente/templates/cliente_form.html
+++ b/projeto/cliente/templates/cliente_form.html
@@ -5,13 +5,7 @@
 
 <style>
     
-    body {
-        font-family: Arial;
-    }
-    label{
-        z-index: -1;
-        position: relative;
-    }
+    body {font-family: Arial;}
     
     /* Style the tab */
     .tab {
