--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -212,6 +212,8 @@ window.onload = function imprimir_promissoria(){
     if(mes == 12){
         mes = 'Dezembro'
     }
+    
+    if(avalista){
     promissoria.innerHTML +=		
         `
         <div class="body">
@@ -262,6 +264,59 @@ window.onload = function imprimir_promissoria(){
             </a> 
         </div>    
         `
+    }
+    else{
+        promissoria.innerHTML +=
+        `
+        <div class="body">
+            <a class="test1">&nbsp</a>
+            <a class="test1">Fiador:</a>
+            <a class="test1"> CPF:${"{{object.cliente.avalista.cpf_avalista}}"}
+            <br>${"{{object.cliente.avalista}}"} </a>
+            <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
+            <a class="ait"> 
+                <b class = "fontmaior" >&nbspNº</b>                 
+                <b class="bordinha fontmaior">&nbsp&nbsp${contador_parcela}/${aux_qtd_parccela}&nbsp&nbsp</b>  
+
+                <b class="fontmenor"> Vencimento: ${dia} de ${mes} de ${ano} </b> 
+
+                <b>
+                    <b class="bordinha fontmaior1">R$&nbsp&nbsp${dinheiro}&nbsp</b> 
+                </b>           
+                <br><br> 
+                <p class="fontmenor a" align="Justify">                     
+                    &nbsp&nbsp&nbsp&nbsp Ao(s) <u>  ${dia} de ${mes} de ${ano} </u>&nbsp&nbsp pagarei por esta única via de <b> NOTA PROMISSÓRIA
+                    a ESCTOP - EMPRESA SIMPLES DE CRÉDITO LTDA, CNPJ 35.297.061/0001-47 </b>  ou à sua ordem, a quantia de <u> ${real} reais e ${centavos} centavos</u> 
+                    em moeda corrente deste país, pagável em ESCRITÓRIO NATAL/RN.    
+                </p>   
+
+                <p class="fontmenor emitente" style="text-align:center">                     
+                    <b>
+                        <u>  
+                            ${"{{object.cliente}}"} 
+                        </u>
+                    </b> 
+                    <br>
+                    EMITENTE<br>
+                    CPF <br>
+                    ${"{{object.cliente.cpf}}"}  
+                </p>
+
+                <p class="fontmenor emissao" style="text-align:center">                     
+                    <b>
+                        <u> 
+                            &nbsp&nbsp${"{{object.data_emprestimo}}"}&nbsp&nbsp 
+                        </u>
+                    </b>
+                    <br>
+                    DATA DE EMISSÃO <br>
+                    ___________________________<br>
+                    ASSINATURA DO EMITENTE
+                </p>               
+            </a> 
+        </div>    
+        `
+    }
     }			
 }
 
