--- a/projeto/core/templates/includes/nav.html
+++ b/projeto/core/templates/includes/nav.html
@@ -74,7 +74,7 @@ body {
 
 <div class="topnav" id="myTopnav">
     <a href="{% url 'core:index' %}" class="active" class="nav-link">CREDCOOP</a>
-    <a href="{% url 'cliente:cliente_list' %}">Clientes</a>
+    <a href="{% url 'core:cliente_select' %}">Clientes</a>
     <a href="{% url 'cliente:avalista_list' %}">Fiador</a>
     <a href="{% url 'emprestimo:emprestimo_list' %}">Empréstimos</a>
 
