--- a/projeto/core/templates/cliente_select.html
+++ b/projeto/core/templates/cliente_select.html
@@ -3,11 +3,11 @@
 {% block content %}
     <div class="jumbotron">
         <div class="container">
-            <h1>Escolha um Cliente</h1>
-            
+            <h1>Escolha um Cliente</h1>           
 
             <span class="pull-center">
                 <a href="{% url 'cliente:cliente_list' %}" type="button" class="btn btn-secondary">CPF</a>                
+                <a href="{% url 'cliente_cnpj:cliente_cnpj_list' %}" type="button" class="btn btn-secondary">CNPJ</a>                
             </span>
             
         </div>
