Cliente_cnpj detail inserido

--- a/projeto/cliente_cnpj/templates/cliente_cnpj_list.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_list.html
@@ -4,7 +4,7 @@
 
 <div class="class page-header">
     <div class="float-right">
-        <a href="#" type="button" class="btn btn-success">Cadastrar Cliente CNPJ</a>
+        <a href="{% url 'cliente_cnpj:cliente_cnpj_add' %}" type="button" class="btn btn-success">Cadastrar Cliente CNPJ</a>
     </div>
         
     <div>
