--- a/projeto/cliente/templates/cliente_list.html
+++ b/projeto/cliente/templates/cliente_list.html
@@ -8,7 +8,7 @@
     </div>
         
     <div>
-        <h2>Lista de Clientes</h2>
+        <h2>Lista de Clientes(CPF)</h2>
     </div>    
     
     {% if object_list %}
