--- a/projeto/emprestimo/templates/emprestimo_list.html
+++ b/projeto/emprestimo/templates/emprestimo_list.html
@@ -26,7 +26,11 @@
             <tbody>
                 {% for object in object_list  %}   
                 <tr>
+                {% if object.cliente %}
                     <td style="text-align:left">{{ object.cliente }}</td>
+                {% else %}
+                    <td style="text-align:left">{{ object.cliente_cnpj }}</td>
+                {% endif %}
                     <td style="text-align:center">{{ object.num_doc }}</td>
                     <td style="text-align:center">{{ object.valor_emprestado }}</td>
                     <td style="text-align:center">{{ object.qtd_parcelas }}x</td>  
