--- a/projeto/emprestimo/templates/emprestimo_promissoria.html
+++ b/projeto/emprestimo/templates/emprestimo_promissoria.html
@@ -270,8 +270,8 @@ window.onload = function imprimir_promissoria(){
         `
         <div class="body">
             <a class="test1">&nbsp</a>
-            <a class="test1">Fiador:</a>
-            <a class="test1"> CPF:${"{{object.cliente.avalista.cpf_avalista}}"}
+            <a class="test1">&nbsp</a>
+            <a class="test1"> &nbsp${"{{object.cliente.avalista.cpf_avalista}}"}
             <br>${"{{object.cliente.avalista}}"} </a>
             <a class="test1">_____________________________ &nbsp&nbsp&nbsp</a>
             <a class="ait"> 
