--- a/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
+++ b/projeto/cliente_cnpj/templates/cliente_cnpj_form.html
@@ -59,10 +59,9 @@
    <!-- https://www.schoolofnet.com/forum/topico/como-enviar-a-mensagem-de-sucesso-ou-erro-para-o-formulario-8495 -->    
 
     <div class="tab">
-        <button class="tablinks" onclick="openCity(event, 'Page1')">Dados Pessoais</button>
-        <button class="tablinks" onclick="openCity(event, 'Page2')">Dados do Local de Trabalho</button>
-        <button class="tablinks" onclick="openCity(event, 'Page3')">Dados Bancários</button>
-        <button class="tablinks" onclick="openCity(event, 'Page4')">Referências e Observações</button>
+        <button class="tablinks" onclick="openCity(event, 'Page1')">Dados Pessoais</button>        
+        <button class="tablinks" onclick="openCity(event, 'Page2')">Dados Bancários</button>
+        <button class="tablinks" onclick="openCity(event, 'Page3')">Referências e Observações</button>
     </div>
     
     <div id="Page1" class="tabcontent" style="display:block">
@@ -107,11 +106,10 @@
                     {% render_field form.email class="form-control" %}
                 </div>
             </div> 
-
         </div>                 
     
         <h2>ENDEREÇO</h2>
-        {% comment %} <div class="row">
+        <div class="row">
             <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" class="required">{{form.cep.label}} </label>        
@@ -155,7 +153,8 @@
                     {% render_field form.ponto_referencia class="form-control" %}
                 </div>
             </div>
-            <div class="col-sm-2">                    
+            
+            {% comment %} <div class="col-sm-2">                    
                 <div class="form-group" >                
                     <label for="" class="required">{{form.contato1.label}} </label>        
                     {% render_field form.contato1 class="form-control phone-mask"  type="text"%}
@@ -184,84 +183,12 @@
                     <label for="" >{{form.email.label}} </label>        
                     {% render_field form.email class="form-control" %}
                 </div>
-            </div>
-        </div>   {% endcomment %}
+            </div> {% endcomment %}
+        </div>   
     </div>
 
+    
     <div id="Page2" class="tabcontent">
-        <h2>DADOS DO LOCAL DE TRABALHO</h2>
-        {% comment %} <div class="row">
-            <div class="col-sm-5">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.nome_fantasia.label}} </label>        
-                    {% render_field form.nome_fantasia class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.contato1_trabalho.label}} </label>        
-                    {% render_field form.contato1_trabalho class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.contato2_trabalho.label}} </label>        
-                    {% render_field form.contato2_trabalho class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.celular1_trabalho.label}} </label>        
-                    {% render_field form.celular1_trabalho class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.celular2_trabalho.label}} </label>        
-                    {% render_field form.celular2_trabalho class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-2">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.cep_trabalho.label}} </label>        
-                    {% render_field form.cep_trabalho class="form-control" %}
-                            
-                </div>
-            </div>
-            <div class="col-sm-4">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.rua_trabalho.label}} </label>        
-                    {% render_field form.rua_trabalho class="form-control"  %}
-                </div>
-            </div>               
-            <div class="col-sm-5">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.bairro_trabalho.label}} </label>        
-                    {% render_field form.bairro_trabalho class="form-control"  %}
-                </div>
-            </div>
-            <div class="col-sm-4">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.cidade_trabalho.label}} </label>        
-                    {% render_field form.cidade_trabalho class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-1">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.uf_trabalho.label}} </label>        
-                    {% render_field form.uf_trabalho class="form-control" %}
-                </div>
-            </div>
-            <div class="col-sm-1">                    
-                <div class="form-group" >                
-                    <label for="" >{{form.referencia_trabalho.label}} </label>        
-                    {% render_field form.referencia_trabalho class="form-control" %}
-                </div>
-            </div>
-        </div>    {% endcomment %}
-    </div>    
-
-    <div id="Page3" class="tabcontent">
         <h2>DADOS BANCÁRIOS</h2>
         {% comment %} <div class="row">
             <div class="col-sm-2">                    
@@ -291,7 +218,7 @@
         </div>  {% endcomment %}
     </div>
 
-    <div id="Page4" class="tabcontent">         
+    <div id="Page3" class="tabcontent">         
         <div class="row">
             <div class="col-sm-5">                    
                 <div class="form-group" >                
